--- a/src/components/content-card.css
+++ b/src/components/content-card.css
@@ -112,8 +112,10 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  min-height: 100%;
+  height: 100%;
+  width: 100%;
   padding: 1.1em;
+  padding-bottom: 0.3em;
   gap: 0.6em;
   box-sizing: border-box;
   min-width: 0;
@@ -240,6 +242,7 @@
 }
 
 .mrs-content-card__lower {
+  margin-top: auto;
   min-height: 0;
 }
 
